feat: GET /students/email/{email}
