# backend/api/openapi.yaml
@@ -26,6 +26,8 @@ tags:
     description: Authentication Management Operations for Google OAuth 2.0
   - name: ProfessorReview
     description: API Endpoint for Specific Professor Review
+  - name: Favourite
+    description: Favourite CRUD Operations
 
 paths:
   /health:
@@ -776,6 +778,43 @@ paths:
                 code: 500
                 message: "Internal server error"
 
+  /courses/{id}/favourites:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+        description: The unique identifier of the course to retrieve
+        example: "1a2b3c4d-5678-90ab-cdef-1234567890ab"
+
+    get:
+      summary: Getting Favourites for this Course
+      description: Returns a list of all Favourites corresponding to this Course.
+      tags: [ Course ]
+      responses:
+        "200":
+          description: List of favourites
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Favourite"
+        "400":
+          description: Invalid pagination parameters
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalServerError"
+
   /reviews:
     get:
       summary: Get all reviews
@@ -1213,6 +1252,46 @@ paths:
               schema:
                 $ref: "#/components/schemas/InternalServerError"
 
+  /students/email/{email}:
+    parameters:
+      - name: email
+        in: path
+        required: true
+        description: Email
+        schema:
+          type: string
+          format: email
+
+    get:
+      summary: Get student by their Email
+      description: Returns a single student by their unique email-ID.
+      tags: [ Student ]
+      responses:
+        "200":
+          description: Student found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Student"
+        "400":
+          description: Invalid UUID format
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        "404":
+          description: Student not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalServerError"
+
   /students/{id}:
     parameters:
       - name: id
@@ -1292,6 +1371,93 @@ paths:
           description: Student deleted successfully
         "400":
           description: Invalid UUID format
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalServerError"
+
+  /favourites:
+    get:
+      summary: Gets all the favourites for this student
+      description: Returns all the favourites for this particular student
+      tags: [ Favourite ]
+      responses:
+        "200":
+          description: List of favourites
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Favourite"
+        "400":
+          description: Invalid pagination parameters
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalServerError"
+
+    post:
+      summary: Adds a favourite to your list
+      description: Returns the favourite that was created.
+      tags: [ Favourite ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/FavoritePostInput"
+      responses:
+        "201":
+          description: Created Favourite
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Favourite"
+        "400":
+          description: Bad request (validation error)
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalServerError"
+
+  /favourites/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: Course UUID
+        schema:
+          type: course
+          format: uuid
+
+    delete:
+      summary: Deletes the favourite.
+      description: Removes a favourited course by a student.
+      tags: [ Favourite ]
+      responses:
+        "204":
+          description: Deleted
+        "400":
+          description: Bad request (invalid id)
           content:
             application/json:
               schema:
@@ -1389,7 +1555,6 @@ paths:
               example:
                 code: 500
                 message: "Internal server error"
-
 
 components:
   securitySchemes:
@@ -2027,3 +2192,30 @@ components:
           type: string
           minLength: 1
           maxLength: 2000
+
+    Favourite:
+      type: object
+      required:
+        - studentId
+        - courseId
+        - createdAt
+        - updatedAt
+      properties:
+        studentId:
+          $ref: "#/components/schemas/UuidParam"
+        courseId:
+          $ref: "#/components/schemas/UuidParam"
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+
+    FavoritePostInput:
+      type: object
+      required:
+        - course_id
+      properties:
+        course_id:
+          $ref: "#/components/schemas/UuidParam"
