# backend/src/service/handler/favourite/index.ts
@@ -13,6 +13,7 @@ export class FavouriteHandler {
 
     async handleGet(req: Request, res: Response): Promise<void> {
         const studentID = (req as AuthenticatedRequest).user.id;
+        console.log("STUDENT ID: ", studentID);
 
         let favourites: Favourite[]
         try {
@@ -27,6 +28,7 @@ export class FavouriteHandler {
 
     async handlePost(req: Request, res: Response): Promise<void> {
         const studentID = (req as AuthenticatedRequest).user.id;
+        console.log("STUDENT ID: ", studentID);
 
         const result = FavouritePostInputSchema.safeParse(req.body);
         if (!result.success) throw BadRequest("unable to parse input for post-favourite");
@@ -45,6 +47,7 @@ export class FavouriteHandler {
 
     async handleDelete(req: Request, res: Response): Promise<void> {
         const studentID = (req as AuthenticatedRequest).user.id;
+        console.log("STUDENT ID: ", studentID);
         const courseID = req.params.id as string;
 
         try {
